--- a/.github/workflows/aptible.yml
+++ b/.github/workflows/aptible.yml
@@ -16,7 +16,7 @@ jobs:
       uses: aptible/aptible-deploy-action@v4
       with:
         type: git
-        app: linda
-        environment: golu
+        app: dholak
+        environment: dolak
         username: ${{ secrets.APTIBLE_USERNAME }}
         password: ${{ secrets.APTIBLE_PASSWORD }}
